# humanoid-robotics-book

./: .gitignore  .markdownlint.json  .prettierignore  404.html  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docusaurus.config.js  index.html  package-lock.json  package.json  requirements.txt  sidebars.js  sitemap.xml
.claude/: settings.local.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json  site-metadata.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
Hugging-Face/: README.md
Hugging-Face/RAG_Chatbot/: Dockerfile  README.md  app.py  requirements.txt
STYLE_GUIDE/: index.html
ai-navigation/control-systems/: index.html
ai-navigation/intro/: index.html
ai-navigation/introduction/: index.html
ai-navigation/isaac-ros/: index.html
ai-navigation/isaac-setup/: index.html
ai-navigation/isaac-sim/: index.html
ai-navigation/localization/: index.html
ai-navigation/mapping/: index.html
ai-navigation/mini-project/: index.html
ai-navigation/navigation-planning/: index.html
ai-navigation/path-planning/: index.html
ai-navigation/troubleshooting/: index.html
ai-navigation/vslam/: index.html
assets/ATTRIBUTION/: index.html
assets/css/: styles.4badbe07.css
assets/js/: 0e384e19.dc6a17ef.js  113c851a.c076c78a.js  15a39f13.ff203557.js  (+60 more)
backend/: .gitignore  README.md  main.py  pyproject.toml  quick_test.py  rag_agent_service.py  rag_agent_service_fixed.py
docs/: STYLE_GUIDE.md  intro.md
intro/: index.html
(+165 files in other folders)
